Adding the install config for the module and updating module description.

--- a/bfi_mini_orange/bfi_mini_orange.info.yml
+++ b/bfi_mini_orange/bfi_mini_orange.info.yml
@@ -1,6 +1,6 @@
 name: 'BFI Mini Orange'
 type: module
-description: 'Module relating to the Mini Orange oauth client contributed module.'
+description: 'Module relating to the Mini Orange OAuth & OpenID Connect Login contributed module.'
 package: BFI
 core_version_requirement: ^10 || ^11
 dependencies:
