Updating module composer.

--- a/bfi_mini_orange/composer.json
+++ b/bfi_mini_orange/composer.json
@@ -1,6 +1,6 @@
 {
     "name": "drupal/bfi-mini-orange",
     "type": "drupal-module",
-    "description": "Custom Drupal module",
-    "license": "GPL-2.0+"
+    "description": "Provides functionality for SSO.",
+    "license": "GPL-2.0-or-later"
 }
