--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,5 @@
 {
-    "name": "drupal/bfi-mini-orange",
+    "name": "bfi-digital/bfi-mini-orange",
     "type": "drupal-module",
     "description": "Provides functionality for SSO.",
     "license": "GPL-2.0-or-later"
